Feature ETP-1720: Java 11 Compatibility fixed